--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -519,23 +519,29 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 				- 15° Clément (Victor-Joseph), teinturier&#8239;;<br>
 				- 16° Courbet (Gustave), artiste peintre&#8239;;<br>
 				- 17° Parent (Ulysse), artiste dessinateur&#8239;;"</p><span> 
-<p><span>Parmis les arrêtés qui furent juger devant le troisième Conseil de guerre (celui qui a jugé les membres de la Commune) nombreux sont ceux condamnés à mort. 
-Théoriquement, la peine de mort pour raisons politiques avait été abolie en 1848, mais à l'époque comme aujourd'hui le crime ou le délit politique n'est pratiquement jamais reconnu et ceci por plusieurs raisons&#8239;:<br>
-- Pour criminaliser les détenus/prévenus politiques. Et ce faisant pour décridibiliser leurs actions et discourts.<br>
-- Pour éviter le traîtement particulier dont à le droit en temps normal un détenu politiqe. Actuellement l’article 397-6 du code de procédure pénale prévoit que la convocation
-par procès-verbal ainsi que la comparution immédiate <i>«&#8239;ne sont applicables
-ni aux mineurs, ni en matière de délits de presse, de délits politiques
-	ou d’infractions dont la poursuite est prévue par une loi spéciale&#8239;».</i>
-En l’absence de définition légale, deux approches possibles peuvent être
-retenues pour donner une qualification politique à l’infraction. Selon
-une approche subjective, sera politique, toute infraction dont l’auteur a
-agi dans un but politique. Selon une approche objective, est politique,
-l’infraction qui porte atteinte à l’organisation et au fonctionnement des
-pouvoirs publics. Le critère objectif prédomine aujourd’hui. En principe,
-seule l’infraction dont l’objet est politique, constitue une infraction politique.<br>
-Pour en revenir à la Commune de Paris, Victor Hugo écrivit à Bigot une lettre dans laquelle il se prononçait à nouveau contre la peine de mort et demandait la vie pour tous les condamnés. 
-La peine fut commuée en travaux forcés à perpétuité. De sorte que la longue agonie de Maroteau a duré quatre ans au bagne en Nouvelle-Calédonie. Il est mort en 1875. Le 18 mars.		      
-
+<p><span>Parmi les communards arrêtés et qui furent jugés devant le troisième Conseil de guerre (celui qui a jugé les membres de la Commune) nombreux sont ceux condamnés à mort. Théoriquement, la peine de mort pour raisons politiques avait été abolie en 1848, 
+mais à l’époque comme aujourd’hui le crime ou le délit politique n’est pratiquement jamais reconnu.<br>
+Et ceci pour plusieurs raisons&#8239;:
+<br>
+- Pour criminaliser les détenus/prévenus politiques, et ce faisant pour décridibiliser leurs actions et idées.
+<br>
+- Pour éviter le traîtement particulier auquel a droit en temps normal un détenu politique. 
+<br>
+Actuellement l’article 397-6 du code de procédure pénale prévoit que la convocation par procès-verbal ainsi que la comparution immédiate 
+«&#8239;ne sont applicables ni aux mineurs, ni en matière de délits de presse, de délits politiques ou d’infractions dont la poursuite est 
+prévue par une loi spéciale&#8239;». En l’absence de définition légale, deux approches possibles peuvent être retenues pour donner une 
+qualification politique à l’infraction. Selon une approche subjective, sera politique toute infraction dont l’auteur a agi dans un but politique. Selon une approche objective, 
+est politique l’infraction qui porte atteinte à l’organisation et au fonctionnement des pouvoirs publics. Le critère objectif prédomine aujourd’hui. En principe, seule l’infraction dont l’objet est politique, constitue une infraction politique.	 
+	 <br>
+Pour en revenir à la Commune de Paris, Victor Hugo écrivit à Bigot une lettre dans laquelle il se prononçait à nouveau contre la peine de mort et demandait la vie pour tous les condamnés. La peine fut commuée en travaux forcés à perpétuité. 
+De sorte que la longue agonie de Maroteau a duré quatre ans au bagne en Nouvelle-Calédonie. Il est mort le 18 mars 1875. </p><span>		      
+<p><cite><span>  Mon cher ami,<br>
+<br>
+    Je suis à Ste-Pélagie depuis hier. On s’est obstiné à nous considérer en point de vue de droit commun, et non comme politiques. 
+Nous sommes avec les voleurs jusqu’au cou. On a employé tous les moyens pour nous déconsidérer. 
+Par conséquent, quand vous viendrez me voir, je ne pourrai vous recevoir autre part qu’au parloir. […]<br><br></cite>
+ Lettre de G.Courbet à Jules Castagnary (un journaliste et un de ses amis) depuis Paris, prison de Sainte-Pélagie, le 23 septembre 1871.</p>	
+	
 				<a id="proces_des_principaux_membres" rel="corpus/proces_des_principaux_membres">
 				<img src="https://drive.google.com/uc?id=1RJLTeKvINJ4TyqQMpOmQizCsW4DDukFT" alt="proces_des_principaux_membres" width="300" height="auto" />
 				<p><span><i>Le 3eme conseil de guerre tient séance à Versailles procès des principaux membres de la Commune</i>, photographie</p>
