--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -74,7 +74,8 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Recueil thématique&#8239;</h3>(cliquer sur l'image pour la lecture en ligne)<span></caption>    
+			<caption><span><h3>Ici sont rangés tous les écrits originaux des éditions plagiat. <br>
+				(Vous y trouverz&#8239;: textes théoriques, textes réédités avec dessins et préfaces originaux, articles...)</h3>(cliquer sur l'image pour la lecture en ligne)<span></caption>    
 	         
             <br>
 			
