--- a/plagiat_ed_corpus_commune_archives.html
+++ b/plagiat_ed_corpus_commune_archives.html
@@ -76,7 +76,13 @@
 							Je n’ajoute plus qu’un mot&#8239;: la fortune est capricieuse&#8239;; je confie à l’avenir le soin de ma mémoire et de ma vengeance&#8239;!<br>
 </cite>FERRÉ : Membre de la Commune de Paris</i></p><br>
 			
-						<p><span>(présentation)	Le corpus que nous introduisons ici...
+						<p><span>Le corpus que nous introduisons ici cherche à donner les moyens d'appréhender la Commune de Paris de 1871.
+				Le but est, non de proposer une analyse ou un discours sur ce qui fut fait, mais de mettre à disposition une plateforme réunissant et rendant facilement accessible ce qui nous semble essentiel et beau sur le sujet.
+				(Archives, films, romans,&#8239;...)<br><br>
+				D'autres sites l'ont fait et nous les listons en fin de page.<br><br>
+				Enfin comme nous sommes des êtres pensants et pas de simples robots, nous nous sommes permis de petites réflexions par-ci par-là, et nous avaons fait des choix dans ce qui est proposé.
+				Néanmoins comme nous ne sommes pas infaillibles, n'hésitez pas à nous proposer des choses qu'on aurait pu oublier. 
+				Attention, il faut que cette documentation soit accessible sur internet ou libre de droits sur un autre support.<br><br>
               <br> En voici les grands axes</p>
    						          <a font color="purple" href="#1" target="_self">1&#8239;-&#8239;Déclaration officielle de la Commune de 1871</a><br>
                         <a font color="purple" href="#2" target="_self">2&#8239;-&#8239;Lexique des organes de la Commune</a><br>
