--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Editions Plagiat Corpus - Commune Archives et textes</title> 
+<title>Editions Plagiat Miscellanées - Commune Archives et textes</title> 
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_miscellanees_commune_archives.css" />
@@ -80,7 +80,7 @@
 				Le but est, non de proposer une analyse ou un discours sur ce qui fut fait, mais de mettre à disposition une plateforme réunissant et rendant facilement accessible ce qui nous semble essentiel et beau sur le sujet.
 				(Archives, films, romans,&#8239;...)<br><br>
 				D'autres sites l'ont fait et nous les listons en fin de page.<br><br>
-				Enfin comme nous sommes des êtres pensants et pas de simples robots, nous nous sommes permis de petites réflexions par-ci par-là, et nous avaons fait des choix dans ce qui est proposé.
+				Enfin comme nous sommes des êtres pensants et pas de simples robots, nous nous sommes permis de petites réflexions par-ci par-là, et nous avons fait des choix dans ce qui est proposé.
 				Néanmoins comme nous ne sommes pas infaillibles, n'hésitez pas à nous proposer des choses qu'on aurait pu oublier. 
 				Attention, il faut que cette documentation soit accessible sur internet ou libre de droits sur un autre support.<br><br>
               <br> En voici les grands axes</p>
@@ -451,7 +451,7 @@ Signé&#8239;: Ch. Beslay, Jourde, Theisz, Lefrançais, Eugène Gérardin, Vermo
 <br>Fait à Paris le 15 mai 1871</p><span>	
 	
         <p><b><br>&#8239;-&#8239;Déclaration du Comité de Salut Public</b></p><span>	
-<p>Déclaration réalisé le 23 mai par le nouveau comité qui fut élu le 9 mai. Ces nouveaux membres sont des blanquistes ou des jacobins.)<br><br>
+<p>Déclaration réalisé le 23 mai par le nouveau comité qui fut élu le 9 mai. Ces nouveaux membres sont des blanquistes ou des jacobins.<br><br>
     Citoyens,
 <br>
     La trahison a ouvert les portes à l’ennemi&#8239;; il est dans Paris&#8239;; il nous bombarde&#8239;; il tue nos femmes et nos enfants.
@@ -525,7 +525,15 @@ M. le Président demande à chacun d’eux ses nom, prénoms, domicile et profes
 				- 15° Clément (Victor-Joseph), teinturier&#8239;;<br>
 				- 16° Courbet (Gustave), artiste peintre&#8239;;<br>
 				- 17° Parent (Ulysse), artiste dessinateur&#8239;;"</p><span> 
-<p><span>Parmi les communards arrêtés et qui furent jugés devant le troisième Conseil de guerre (celui qui a jugé les membres de la Commune) nombreux sont ceux condamnés à mort. Théoriquement, la peine de mort pour raisons politiques avait été abolie en 1848, 
+			      
+<p><cite><span>  Mon cher ami,<br>
+<br>
+    Je suis à Ste-Pélagie depuis hier. On s’est obstiné à nous considérer en point de vue de droit commun, et non comme politiques. 
+Nous sommes avec les voleurs jusqu’au cou. On a employé tous les moyens pour nous déconsidérer. 
+Par conséquent, quand vous viendrez me voir, je ne pourrai vous recevoir autre part qu’au parloir. […]<br><br></cite>
+ Lettre de G.Courbet à Jules Castagnary (un journaliste et un de ses amis) depuis Paris, prison de Sainte-Pélagie, le 23 septembre 1871.</p>
+			      
+			      <p><span>Parmi les communards arrêtés et qui furent jugés devant le troisième Conseil de guerre (celui qui a jugé les membres de la Commune) nombreux sont ceux condamnés à mort. Théoriquement, la peine de mort pour raisons politiques avait été abolie en 1848, 
 mais à l’époque comme aujourd’hui le crime ou le délit politique n’est pratiquement jamais reconnu.<br>
 Et ceci pour plusieurs raisons&#8239;:
 <br>
@@ -538,15 +546,10 @@ Actuellement l’article 397-6 du code de procédure pénale prévoit que la con
 prévue par une loi spéciale&#8239;». En l’absence de définition légale, deux approches possibles peuvent être retenues pour donner une 
 qualification politique à l’infraction. Selon une approche subjective, sera politique toute infraction dont l’auteur a agi dans un but politique. Selon une approche objective, 
 est politique l’infraction qui porte atteinte à l’organisation et au fonctionnement des pouvoirs publics. Le critère objectif prédomine aujourd’hui. En principe, seule l’infraction dont l’objet est politique, constitue une infraction politique.	 
-	 <br>
+	 <br><br>
 Pour en revenir à la Commune de Paris, Victor Hugo écrivit à Bigot une lettre dans laquelle il se prononçait à nouveau contre la peine de mort et demandait la vie pour tous les condamnés. La peine fut commuée en travaux forcés à perpétuité. 
-De sorte que la longue agonie de Maroteau a duré quatre ans au bagne en Nouvelle-Calédonie. Il est mort le 18 mars 1875. </p><span>		      
-<p><cite><span>  Mon cher ami,<br>
-<br>
-    Je suis à Ste-Pélagie depuis hier. On s’est obstiné à nous considérer en point de vue de droit commun, et non comme politiques. 
-Nous sommes avec les voleurs jusqu’au cou. On a employé tous les moyens pour nous déconsidérer. 
-Par conséquent, quand vous viendrez me voir, je ne pourrai vous recevoir autre part qu’au parloir. […]<br><br></cite>
- Lettre de G.Courbet à Jules Castagnary (un journaliste et un de ses amis) depuis Paris, prison de Sainte-Pélagie, le 23 septembre 1871.</p>	
+Il est mort le 18 mars 1875. </p><span>		      
+	
 	
 				<a id="proces_des_principaux_membres" rel="corpus/proces_des_principaux_membres">
 				<img src="https://drive.google.com/uc?id=1RJLTeKvINJ4TyqQMpOmQizCsW4DDukFT" alt="proces_des_principaux_membres" width="300" height="auto" />
