Update and rename plagiat_ed_miscellanées.html to plagiat_ed_miscellanees.html

--- a/plagiat_ed_miscellanees.html
+++ b/plagiat_ed_miscellanees.html
@@ -75,7 +75,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Actions-Evénements: état des lieux.</h3>Ne pas hésiter à utiliser le mail (contact) pour nous relayer un texte.<span></caption>    
+			<caption><span><h3>Inclassables,  fragments, autres...<span></caption>    
 	  
 	    <tr>
 	                <td width="200" id="illu1937"><br>
