--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -682,7 +682,7 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 				<p><span><i>La Légion d'Honneur</i>, 1871</p><br>
 				<a id="étoile" rel="corpus/étoile">
 				<img src="https://drive.google.com/uc?id=1cuwGA8IHIwC89SzVNP3adyIkCJ5ENWYZ" alt="étoile" width="300" height="auto" />
-				<p><span><i>Place de l'étoile</i>, 1871</p><br>					
+				<p><span><i>Arc de Triomphe du Carrousel du Louvre</i>, 1871</p><br>					
                
         <p><b><br>10&#8239;-&#8239;Productions réalisées sur la Commune de Paris (1871)<A NAME="10"></A> </b></p><span>    
              
