--- a/plagiat_ed_miscellanées.html
+++ b/plagiat_ed_miscellanées.html
@@ -80,7 +80,7 @@
 	    <tr>
 	                <td width="200" id="illu1937"><br>
 			                <a id="Carrousel" rel="article" href="plagiat_ed_miscellanees_commune_archives.html">
-			                <img src="phototele-1208584_0.jpg" alt="Carrousel" width="200" height="auto" /></a>
+			                <img src="    image_site/phototele-1208584_0.jpg" alt="Carrousel" width="200" height="auto" /></a>
 			            </td>
 	                    <td width="325" id="commune_archives">
 						<p><span>Corpus de références sur:<br>La Commune de Paris (1871)<span></p>
