--- a/plagiat_ed_miscellanées.html
+++ b/plagiat_ed_miscellanées.html
@@ -84,7 +84,7 @@
 			            </td>
 	                    <td width="325" id="commune_archives">
 						<p><span>Corpus de références sur:<br>La Commune de Paris (1871)<span></p>
-                            <p><span><br>Editions Plagiat 2023<span></p> 
+                            <p><span>Editions Plagiat 2023<span></p> 
 
 			            </td>
 		            </tr>
