--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -146,7 +146,9 @@
 				<p><span>MARX, Karl
 					<br><a href="https://drive.google.com/uc?id=1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB" title="citiquedroitPdf">
 					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a>
-					<br><a href="https://drive.google.com/uc?id=1PljVQdGf7oTgnSi5q0lEYw8p6yIfo-5Y" title="1844Pdf">
+					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="FeuerbachPdf">
+					<a id="GUERRE CIVILE" rel="" href="http://classiques.uqac.ca/classiques/Marx_karl/guerre_civile_france/guerre_civile_france.pdf">
+					<u><i>LA GUERRE CIVILE en France 1871 (La Commune de Paris), avec préface de Engels</i></u><span></a><br>
 					<i><u>Manuscrit de 1844(.pdf)</u></a>
 					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="FeuerbachPdf">
 					<u>Thèses sur Feuerbach</i>(.pdf)</p></u></a></i></span>
@@ -244,7 +246,7 @@
 				<p><span>STRIP TEASE <br>
 					<a id="Strip Tease" rel="Strip Tease" href="https://www.youtube.com/@StripTeaseTVFR/videos">
 					<u><i>185 vidéos de Strip Tease</i></u></span></p></a>
-	    				<p><span>WATKINS,Peter,<br>	
+	    			<p><span>WATKINS,Peter,<br>	
 				<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70fzr">
 					    <u>La Bombe, partie I</i></u><span></a><br>
 		              <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
