--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -210,7 +210,7 @@ Après les élections du 8 février 1871, le gouvernement de la Défense nationa
 	                  <h4>Assemblée nationale de 1871</h4>
 			<p><span>						
  La nouvelle Assemblée nationale -&#8239;issue des élections du 8 février dominées par le poids du vote rural et bourgeois&#8239;- 
-est majoritairement conservatrice et monarchiste. Elle met fin au Gouvernement de la Défense nationale et élit Adolphe Thiers chef du gouvernement, en remplacement du général Trochu.
+est majoritairement conservatrice et monarchiste, (sur 750 députés, 450 monarchistes), représentants des grands propriétaires terriens. Elle met fin au Gouvernement de la Défense nationale et élit Adolphe Thiers chef du gouvernement, en remplacement du général Trochu.
 On y retrouve un certain nombre d'élus déjà bien connus dans l'ancien gouvernement de Défense nationale&#8239;: Jules Favre, Jules Ferry, Léon Gambetta...
 Les intérets restent les mêmes qu'avant, se défendre non contre les prussiens mais contre toute forme de révolte populaire et ainsi protéger la bourgeoisie et leurs pouvoirs.
 D'ailleurs on peut ajouter avec les nouveaux élus une nouvelle liste de méfaits allant contre tout principe d'égalité&#8239;:<br>
@@ -222,17 +222,36 @@ massacre des républicains, rue Transnonain, et les infâmes lois de septembre c
 la presse et le droit d'association, qui l'ont suivi, furent tous deux son oeuvre. Quand
 il reparut comme président du Conseil en mars 1840, il produisit le plan
 de fortifications de Paris. Thiers était parmi les plus farouches défenseurs du
-bombardement de Rome par une armée française...
-				Paris étant encerclée, l'Assemblée se réunit à Bordeaux, au Grand Théâtre, le 13 février 1871.
+bombardement de Rome par une armée française... Thiers n'a été conséquent que dans son
+avidité de richesse, et dans sa haine des hommes qui la produisent. Entré pauvre
+comme Job dans son premier ministère sous Louis-Philippe, il le quitta millionnaire. Et pour cause, peu de temps après a Bordeaux, sa première mesure pour sauver la
+France d'une ruine financière imminente fut de se doter lui-même de trois millions
+				par an, premier et dernier mot de la <i>république économe</i>. <br>
+				Bref, Paris étant encerclée, l'Assemblée se réunit à Bordeaux, au Grand Théâtre, le 13 février 1871.
 									      Le nouveau gouvernement 
-se fit une priorité de l'évacuation de l'armée d'occupation allemande, que Bismarck conditionnait au paiement des réparations. 	<br>								      
-Puis l'Assemblée prend des mesures provocatrices contre les Parisiens. Le 6 mars, le général d'Aurelle de Paladines (royaliste) est nommé commandant en chef de la Garde nationale. 
-	Le 10, l'Assemblée vote la fin du moratoire des loyers et des effets de commerce&#8239;: plus de 150 000 Parisiens sont menacés d'expulsion, de faillite et de poursuites judiciaires. 
+se fait une priorité de l'évacuation de l'armée d'occupation allemande, que Bismarck conditionnait au paiement des réparations.<br>								      
+Puis l'Assemblée prend des mesures provocatrices contre les Parisiens. Le 6 mars, le général d'Aurelle de Paladines (royaliste et ancien jésuite) est nommé commandant en chef de la Garde nationale. On voit nommé aussi
+ Vinoy, le décembriseur -&#8239;membre de la Société du Dix décembre, fondée par des amis du Prince Louis-Napoléon Bonaparte pour le soutenir dans sa politique&#8239; -, comme gouverneur de Paris, celle
+de Valentin, le gendarme de l'empire, comme préfet de police.<br>
+L'Assemblée rédige 
+la taxe de Pouyer-Quertier, de deux centimes sur chaque exemplaire de toutes les
+publications quelles qu'elles soient. Elle prononce les sentences de mort contre Blanqui et Flourens,
+et elle délare la suppression des journaux républicains.
+	Le 10, l'Assemblée vote les lois Dufaure sur la fin du moratoire des loyers et des effets de commerce&#8239;: plus de 150 000 Parisiens sont menacés d'expulsion, de faillite et de poursuites judiciaires. 
 	Le même jour, l'Assemblée choisit Versailles comme son lieu de réunion. (Les versaillais sont donc les fidèles à l'Assemblée nationale qui siégent à Versailles et combattrnt la Commune.)
-Armée versaillaise. De fait, Paris perd son rôle de capitale.
-Enfin, pour régler le «&#8239;problème de Paris&#8239;» avant l'arrivée de l'Assemblée, Thiers ordonne la confiscation des canons détenus par les Parisiens. <br>
+Armée versaillaise. 
+				De fait, Paris perd son rôle de capitale.  
+De plus il est probable que Thiers avait contracté un emprunt de deux
+milliards, payable immédiatement, et que l'affaire était arrangée de telle sorte qu'un pot-de-vin de plusieurs centaines de millions tombât dans les poches de Thiers, Jules Favre, Ernest Picard, Pouyer-
+Quertier et Jules Simon. Mais que ce versement, ne serait fait qu'après la « pacification » de Paris.
+Enfin, pour régler le «&#8239;problème de Paris&#8239;» avant l'arrivée de l'Assemblée, Thiers ordonne la confiscation des canons détenus par les Parisiens. Et c'est Thiers et Jules Favre, au
+nom de la majorité de l'Assemblée de Bordeaux, qui sollicitent sans vergogne l'occupation de Paris par les troupes prussiennes, à la surprise amusée de Bismarck.<br>
 									      C'est alors qu'a lieu le soulèvement du 18 mars 1871, et le début de la Commune de Paris. 
-		Pendant la durée de la Commune, l'Assemblée refuse toutes les tentatives de conciliation entreprises par les maires, les députés et les francs-maçons de Paris									      
+		Pendant la durée de la Commune, l'Assemblée refuse toutes les tentatives de conciliation entreprises par les maires, les députés et les francs-maçons de Paris. Elle fait froidement exécuter les hommes de ligne capturés.
+Et quand il s'aperçoivent que le décret de la Commune sur les représailles n'était qu'une menace vaine, les exécutions en masse de prisonniers
+sont reprises et poursuivies sans interruption jusqu'à la fin. Ils interdisent aux ambulances, pourtant neutres, de s'occuper des bléssés. Des maisons où des
+gardes nationaux s'étaient réfugiés sont entourées de gendarmes, arrosées avec du
+pétrole et incendiées...<br>							      
 Après la Semaine sanglante l'Assemblée est enfin «&#8239;libéré&#8239;» de l'hypothèque parisienne, les députés se mettent au travail. 
 		
 									      <h4>La semaine sanglante</h4>
