--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -331,7 +331,7 @@
 					
 			            <td width="300" id="Autres">
 				<p><span><h3><br>Autres</h3><span></p>
-					<p><span>1871, gravures de presse<br>
+					<p><span>1871, gravures de presse
 					<a href="https://drive.google.com/uc?id=1Qz3GS80z7T5xLEVji-hQkz1FIM7u7Ibr" title="gravurespressePdf">
 					<br><i><u>Les gravures de presse de la Commune(.pdf)</u></i></a></span></p>
 
