--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -150,7 +150,7 @@ par d’autres. C’est une nuit du 4 août 1789 que
 nous voulons. Les radicaux, les partis politiques
 même les plus avancés, veulent simplement replâtrer l’édifice social en lui conservant ses bases
 actuelles. Nous voulons, nous, à l’exemple de la
-Constituantede 1789 abolisant le régime féodal,
+Constituante de 1789 abolisant le régime féodal,
 faire table rase et tout reconstituer à neuf. Voilà
 dans quel sens nous sommes révolutionnaires.&#8239;»<br>
 			      (<i>Progrès du Locle</i>, 29 janvier 1870.)</p><span>
@@ -182,23 +182,23 @@ Le général Trochu assume la présidence avec entre autres Léon Gambetta, mini
  Le 27 octobre, le général Trochu reconnait -&#8239;sous la pression de la foule&#8239;- que le gouvernement Républicain est préoccupé surtout par le risque de révolte populaire et cherche à traiter avec les Prussiens pour maintenir l'ordre social.<br>
 Cette peur que tiraillait le gouvernement républicain face à la Commune et qui l'amenait à se défendre, non contre les soldats prussiens, mais les travailleurs de Paris, est tout à fait logique quand on voit les noms de ceux qui le composaient. 
 En effet leurs intérêts se trouvaient dans la rédition à la Prusse et ainsi dans la maintenance de leur pouvoir que dans une révolte populaire avec comme devise l'égalité, la fraternité et la liberté&#8239;:<br>
--Trochu avait sagement confié le
-commandement de l'armée de Paris à des généraux bonapartistes.  -Jules Favre, qui vivait en
+-&#8239;Trochu avait sagement confié le
+commandement de l'armée de Paris à des généraux bonapartistes.
+<br>-&#8239;Jules Favre, qui vivait en
 concubinage avec la femme d'un ivrogne résidant à Alger, était, grâce à l'élaboration
-de faux des plus audacieux échelonnés sur de nombreuses années, parvenu à s'empa-
-rer, au nom de ses enfants adultérins, d'une succession importante qui avait fait de lui
+de faux des plus audacieux échelonnés sur de nombreuses années, parvenu à s'emparer, au nom de ses enfants adultérins, d'une succession importante qui avait fait de lui
 un homme riche et que, dans un procès intenté par les héritiers légitimes, il n'avait
 échappé au scandale que grâce à la connivence des tribunaux bonapartistes. <br>
--Ernest Picard, ce Falstaff du gouvernement de la Défense nationale, qui se nomma lui-même ministre de l'intérieur de la République, après s'être vainement évertué à
+-&#8239;Ernest Picard, ce Falstaff du gouvernement de la Défense nationale, qui se nomma lui-même ministre de l'intérieur de la République, après s'être vainement évertué à
 devenir ministre de l'intérieur de l'Empire, est le frère d'un certain Arthur Picard,
 individu chassé de la Bourse de Paris comme escroc (voir le rapport de la préfecture
 de police en date du 13 juillet 1867), et convaincu, sur son propre aveu, d'un vol de
 300 000 francs alors qu'il était directeur d'une des succursales de la Société générale,
 5, rue Palestro (voir le rapport de la préfecture de police du Il décembre 1868). Cet
 Arthur Picard fut fait, par Ernest Picard, directeur de son journal L'Électeur libre.
-<br> - Jules Ferry, avocat sans le sou avant le 4 septembre, réussit comme maire de Paris
+<br> -&#8239;Jules Ferry, avocat sans le sou avant le 4 septembre, réussit comme maire de Paris
 pendant le siège, à tirer par escroquerie une fortune de la famine. Alors qu'il a la charge d'assurer le ravitaillement de la capitale assiégée par l'armée prussienne,
-		ses malversations durant le siège par les Prussiens lui ont valu le surnom de « Ferry-l’affameur ».				
+		ses malversations durant le siège par les Prussiens lui ont valu le surnom de «&#8239;Ferry-l’affameur&#8239;».				
 				Le 31 octobre 1870, un soulèvement eut lieu, 
 et Trochu ne parvient à sauver son gouvernement qu'en rassemblant les dernières brigades encore loyales, notamment avec l'aide de Jules Ferry. 	
 Jules Favre s'imposa dans les dernières semaines du gouvernement comme le chef. 
@@ -214,7 +214,7 @@ est majoritairement conservatrice et monarchiste, (sur 750 députés, 450 monarc
 On y retrouve un certain nombre d'élus déjà bien connus dans l'ancien gouvernement de Défense nationale&#8239;: Jules Favre, Jules Ferry, Léon Gambetta...
 Les intérets restent les mêmes qu'avant, se défendre non contre les prussiens mais contre toute forme de révolte populaire et ainsi protéger la bourgeoisie et leurs pouvoirs.
 D'ailleurs on peut ajouter avec les nouveaux élus une nouvelle liste de méfaits allant contre tout principe d'égalité&#8239;:<br>
--Thiers, a tenu sous le charme la bourgeoisie française pendant plus d'un demi-siècle, parce qu'il est l'expression intellectuelle la plus achevée de
+-&#8239;Thiers, a tenu sous le charme la bourgeoisie française pendant plus d'un demi-siècle, parce qu'il est l'expression intellectuelle la plus achevée de
 sa propre corruption de classe. Allié des républicains avant 1830, il se faufile au ministère sous Louis-Philippe, en trahissant son protecteur, Laffitte. Il
 s'insinue dans les bonnes grâces du roi en provoquant des émeutes contre le clergé, au cours desquelles l'église Saint-Germain-l'Auxerrois et l'archevêché furent pillés, et en
 se faisant l'espion-ministre, puis l'accoucheur-geôlier de la duchesse de Berry. Le
@@ -243,7 +243,7 @@ Armée versaillaise.
 				De fait, Paris perd son rôle de capitale.  
 De plus il est probable que Thiers avait contracté un emprunt de deux
 milliards, payable immédiatement, et que l'affaire était arrangée de telle sorte qu'un pot-de-vin de plusieurs centaines de millions tombât dans les poches de Thiers, Jules Favre, Ernest Picard, Pouyer-
-Quertier et Jules Simon. Mais que ce versement, ne serait fait qu'après la « pacification » de Paris.
+Quertier et Jules Simon. Mais que ce versement, ne serait fait qu'après la «&#8239;pacification&#8239;» de Paris.
 Enfin, pour régler le «&#8239;problème de Paris&#8239;» avant l'arrivée de l'Assemblée, Thiers ordonne la confiscation des canons détenus par les Parisiens. Et c'est Thiers et Jules Favre, au
 nom de la majorité de l'Assemblée de Bordeaux, qui sollicitent sans vergogne l'occupation de Paris par les troupes prussiennes, à la surprise amusée de Bismarck.<br>
 									      C'est alors qu'a lieu le soulèvement du 18 mars 1871, et le début de la Commune de Paris. 
@@ -284,7 +284,7 @@ La fin de la monarchie de Juillet est marquée par un vaste mouvement favorable 
 En février 1848, la garde nationale fut généralement passive aux combats, mais elle refuse de défendre le roi. Après le départ de Louis-Philippe&#8239;Ier, c'est principalement à la garde nationale que revint la tâche de rétablir l'ordre.
 L'insurrection du 15 mai 1848 vit une rupture entre gardes nationaux bourgeois et partis de gauche et les insurrections ouvrières de juin 1848 furent réprimées violemment par l'armée et les gardes nationaux parisiens appuyés par des gardes nationaux de province. <br>					
 En janvier 1849, un décret de Louis-Napoléon Bonaparte, président de la République, supprima la moitié des bataillons de gardes nationaux et réorganisa les autres. Car, vous aurez devinez, il se méfiait lui aussi de la garde nationale.
-<br>Napoléon III la cantonne pendant le second Empire dans des tâches subalternes afin de réduire son influence libérale et républicaine. 					
+<br>Napoléon&#8239;III la cantonne pendant le second Empire dans des tâches subalternes afin de réduire son influence libérale et républicaine. 					
 					<br>
 Après la déclaration de guerre à la Prusse fin juillet 1870, Napoléon&#8239;III décide de doubler ses effectifs, mais le recrutement est lent parmi la population bourgeoise de la capitale. Les gardes nationaux, au nombre de 590 000, furent mobilisés pour le reste de la guerre et envoyés massivement au front. Ils participèrent à la défense de Paris assiégé.
 Fin septembre 1870, 250 bataillons sont formés et 300 000 hommes mobilisés. Chaque compagnie compte environ 125 hommes. Les bataillons sont formés de quatre compagnies de marche (ou de guerre) et de quatre compagnies sédentaires. 
@@ -394,10 +394,8 @@ avec le droit de ceux-ci à leurs instruments de travail et au crédit. - Le 5 m
 décida de faire raser la chapelle expiatoire élevée en réparation de l'exécution de
 Louis XVI.
 <br>[...] Mais tout cela, dans une ville assiégée, ne pouvait avoir au plus qu'un commencement de réalisation. Et, dès les
-premiers jours de mai, la lutte contre les troupes toujours plus nombreuses du gouver-
-nement de Versailles absorba toutes les énergies.
-Le 7 avril, les Versaillais s'étaient emparés du passage de la Seine, à Neuilly, sur
-le front ouest de Paris ; par contre, le 11, sur le front sud, ils furent repoussés avec des
+premiers jours de mai, la lutte contre les troupes toujours plus nombreuses du gouvernement de Versailles absorba toutes les énergies.
+Le 7 avril, les Versai&#8239;; par contre, le 11, sur le front sud, ils furent repoussés avec des
 pertes sanglantes par une attaque du général Eudes. Paris était bombardé sans arrêt, et
 cela par les mêmes gens qui avaient stigmatisé comme sacrilège le bombardement de
 cette ville par les Prussiens. Ces mêmes gens mendiaient maintenant, auprès du
@@ -673,7 +671,7 @@ Il est mort le 18 mars 1875. </p><span>
 membre de la Commune, délégué à la mairie, délégué à l’Instruction publique: quatre fonctions les plus importantes de Paris. 
 Je me lève, je déjeune, et je siège et préside 12h par jour. Je commence à avoir la tête comme une pomme cuite. 
 Malgré tout ce tourment de tête et de compréhension d’affaires sociales auxquelles je n’étais pas habitué, je suis dans l’enchantement. 
-Paris est un vrai paradis! Point de police, point de sottise, point d’exaction d’aucune façon, point de dispute. 
+Paris est un vrai paradis&#8239;! Point de police, point de sottise, point d’exaction d’aucune façon, point de dispute. 
 Paris va tout seul comme sur des roulettes. Il faudrait pouvoir rester toujours comme cela. En un mot, c’est un vrai ravissement. 
 Tous les corps d’Etat se sont établis en fédération et s’appartiennent. C’est moi qui ai donné le modèle avec les artistes de toutes sortes. 
 Les curés aussi sont à leurs pièces comme les autres, ainsi que les ouvriers, etc., etc., les notaires et les huissiers appartiennent à la Commune, et sont payés par elle comme les receveurs de l’enregistrement. Quant aux curés, s’ils veulent exercer à Paris (quoiqu’on n’y tienne pas), on leur louera des églises.
@@ -686,7 +684,7 @@ c’est tous les mouchards à casse-tête, les soldats du pape, les lâches r
     Paris a renoncé à être la capitale de la France. La France ne voulait plus que Paris lui envoie ses préfets. La France doit être contente, elle est exaucée. Mais aussi Paris ne veut plus être conduit par la France ni par les votes des paysans qui votent pour le Père-Blicite[5]. C’est rationnel, du moment que la province envoie à 
 Paris les gens qui leur paraissent parmi eux les plus distingués pour l’instruire, une fois qu’ils sont instruits, ils ne doivent plus avoir la prétention de les diriger avec leur ignorance. Il faut être logique. Aujourd’hui Paris s’appartient. Il coopérera dans la mesure aux besoins de la France, en restant uni à la patrie commune, 
 et il désire que toutes les provinces de France imite son exemple, de telle sorte que cette fédération devienne une unité puissante qui paralyse à tout jamais les gouverneurs de toutes sortes, ainsi que les vieux systèmes monarchiques, impérialistes et autres. 
-Il veut que la liberté (et il n’y a pas à y revenir) soit consacrée sur la terre. [...]<br>
+Il veut que la liberté (et il n’y a pas à y revenir) soit consacrée sur la terre.&#8239;[...]<br>
 
     Je ne sais maintenant, mes chers parents, quand j’aurai le plaisir de vous revoir. Je suis obligé de faire énergiquement tout ce travail qui m’est confié, et pour lequel j’ai eu tant de propension pendant toute ma vie, moi qui étais décentralisé, en ce sens que j’étais retranché dans mon individualité pendant toute mon existence.
 Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfléchir, je n’ai qu’à agir naturellement.<br>
