--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -377,7 +377,7 @@ de la justice, de la sûreté générale, du travail et de l’échange, des sub
 Les commissions assurent la tutelle des principales administrations. Elles collaborent avec de nombreuses organisations dont l’Union des femmes pour la défense de Paris et les soins aux blessés, le Comité des vingt arrondissements, les clubs (qui sont, pour beaucoup, mixtes), 
 l’Association Internationale des Travailleurs, des syndicats, des associations.
 Cette collaboration permet au peuple de s’impliquer dans l’exercice du pouvoir. De plus tous les élus sont révocable à tout moment.
-<br>- Le 30 mars, est instaurée la reconnaissance de la citoyenneté pour les étranger
+<br>- Le 30 mars, est instaurée la reconnaissance de la citoyenneté pour les étranger.
 <br>- Le 1er avril il fut décidé que le traitement le plus élevé d'un employé
 de la Commune, donc aussi de ses membres, ne pourrait dépasser 6.000 francs. 
 <br>- Le
@@ -388,7 +388,7 @@ symboles, images, prières, dogmes religieux, bref «&#8239;tout ce qui relève 
 <br>- Le 5 avril, en présence des
 exécutions de combattants de la Commune prisonniers, auxquelles procédaient quotidiennement les troupes versaillaises, un décret fut promulgué, prévoyant l'arrestation
 d'otages, mais il ne fut jamais exécuté. 
-<br>-Le 6 avril, le 137e bataillon de la garde nationale
+<br>-Le 7 avril, le 137e bataillon de la garde nationale
 alla chercher la guillotine et la brûla publiquement, au milieu de la joie populaire. 
 <br>- Le 10 avril est voté le  décret voté à l'unanimité concernant les pensions pour les famille (veuves, enfants, parents, frères et sœurs) de gardes nationaux morts au combat.
 Le décret légitime de fait l’union libre (ou concubinage, c’est-à-dire l’union de fait, stable et continue entre 2 personnes). Il confère à la famille constituée hors mariage (concubins, enfants naturels) sa première reconnaissance légale.
@@ -793,13 +793,13 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 				        <a title="otage" href="https://drive.google.com/uc?id=18CTm9lpcGt9swwpGbLz_JXu9etZCn5z6">
 					      <u><i>Mes cahiers rouges, un peu de vérité sur la mort des otages - 24 et 26 mai 1871(.pdf)</i></u></span></a><br>					
 				        <a title="Duchêne"" href="https://drive.google.com/uc?id=1n7exzdU5c2b_JdZxLiKJd_LrwgMVr6bB">
-					      <u><i>Mes cahiers rouges, quand nous faisions le "Père Duchêne" - mars-avril-mai 1871</i></u></span></p></a>		
+					      <u><i>Mes cahiers rouges, quand nous faisions le "Père Duchêne" - mars-avril-mai 1871</i></u></span></a>		
 			        	<a title="quelques-uns" href="https://drive.google.com/uc?id=1ngEs_Dmz2WIp62INJjI2jQ9C-zEiro8G">
 					      <u><i>Mes cahiers rouges, quelques-uns de la Commune(.pdf)</i></u></span></a><br>
 				        <a title="révoltée" href="https://drive.google.com/uc?id=1o9xGoIWOhcR1yQgDJtntiU1AlLYCee0J">
 					      <u><i>Mes cahiers rouges, par la ville révoltée(.pdf)</i></u></span></a><br>					
 				        <a title="large" href="https://drive.google.com/uc?id=1kqgVSzRkP1xpN44dXvY9YJjjw8w4LCnF">
-					      <u><i>Mes cahiers rouges, au large</i></u></span></p></a>
+					      <u><i>Mes cahiers rouges, au large</i></u></span></a>
 			        	<a title="cahier" href="https://drive.google.com/uc?id=12QMjc3bBMEibLxxB2gbFdmkbiIqHNFNe">
 					      <u><i>Mes cahiers rouges, dernier cahier(.pdf)</i></u></span></a><br>
 				        <a title="2drames" href="https://drive.google.com/uc?id=1ZNi0VUx0qK-C7O78CBZ-lI1oC3kY2BtD">
