--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -694,23 +694,23 @@ Paris est un vrai paradis&#8239;! Point de police, point de sottise, point d’e
 Paris va tout seul comme sur des roulettes. Il faudrait pouvoir rester toujours comme cela. En un mot, c’est un vrai ravissement. 
 Tous les corps d’Etat se sont établis en fédération et s’appartiennent. C’est moi qui ai donné le modèle avec les artistes de toutes sortes. 
 Les curés aussi sont à leurs pièces comme les autres, ainsi que les ouvriers, etc., etc., les notaires et les huissiers appartiennent à la Commune, et sont payés par elle comme les receveurs de l’enregistrement. Quant aux curés, s’ils veulent exercer à Paris (quoiqu’on n’y tienne pas), on leur louera des églises.
-
+<br>
 <br>Dans nos moments de loisir, nous combattons les saligauds de Versailles, chacun y va à son tour. 
 Ils pourraient lutter dix ans comme ils le font sans pouvoir entrer dans nos murs, nous perdons très peu de monde et ils en perdent énormément&#8239;; 
 ça n’est pas malheureux, car tout ce qui est à Versailles, comme si on avait choisi, est le monde duquel il faut se débarrasser pour la tranquillité,
-c’est tous les mouchards à casse-tête, les soldats du pape, les lâches rendus à Sedan, et, comme hommes politiques, ce sont les hommes qui ont vendu la France, les Thiers[2], Jules Favre[3], Picard[4], et autres, scélérats, vieux domestiques des tyrans, vieilles poudrées des temps féodaux monarchiques, en un mot la plaie du monde entier.
-
-    Paris a renoncé à être la capitale de la France. La France ne voulait plus que Paris lui envoie ses préfets. La France doit être contente, elle est exaucée. Mais aussi Paris ne veut plus être conduit par la France ni par les votes des paysans qui votent pour le Père-Blicite[5]. C’est rationnel, du moment que la province envoie à 
+c’est tous les mouchards à casse-tête, les soldats du pape, les lâches rendus à Sedan, et, comme hommes politiques, ce sont les hommes qui ont vendu la France, les Thiers, Jules Favre, Picard, et autres, scélérats, vieux domestiques des tyrans, vieilles poudrées des temps féodaux monarchiques, en un mot la plaie du monde entier.
+<br><br>
+    Paris a renoncé à être la capitale de la France. La France ne voulait plus que Paris lui envoie ses préfets. La France doit être contente, elle est exaucée. Mais aussi Paris ne veut plus être conduit par la France ni par les votes des paysans qui votent pour le Père-Blicite. C’est rationnel, du moment que la province envoie à 
 Paris les gens qui leur paraissent parmi eux les plus distingués pour l’instruire, une fois qu’ils sont instruits, ils ne doivent plus avoir la prétention de les diriger avec leur ignorance. Il faut être logique. Aujourd’hui Paris s’appartient. Il coopérera dans la mesure aux besoins de la France, en restant uni à la patrie commune, 
 et il désire que toutes les provinces de France imite son exemple, de telle sorte que cette fédération devienne une unité puissante qui paralyse à tout jamais les gouverneurs de toutes sortes, ainsi que les vieux systèmes monarchiques, impérialistes et autres. 
 Il veut que la liberté (et il n’y a pas à y revenir) soit consacrée sur la terre.&#8239;[...]<br>
-
+<br>
     Je ne sais maintenant, mes chers parents, quand j’aurai le plaisir de vous revoir. Je suis obligé de faire énergiquement tout ce travail qui m’est confié, et pour lequel j’ai eu tant de propension pendant toute ma vie, moi qui étais décentralisé, en ce sens que j’étais retranché dans mon individualité pendant toute mon existence.
 Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfléchir, je n’ai qu’à agir naturellement.<br>
-
+<br>
     La Commune de Paris a un succès que jamais aucune forme du gouvernement n’a eu. Nous venons de recevoir à l’Hôtel de Ville la délégation des francs-maçons, ils étaient 10.000, ils nous garantissent deux cent cinquante mille adhérents et combattants. On ne nous appellera plus une poignée de factieux. 
 	A Versailles, on établit le vrai désordre intentionnellement et maladroitement, en rétablissant avec les fameux députés que la province leur a envoyés et les d’Orléans et les Napoléoniens.<br>
-
+<br>
     Je vous embrasse en vous tranquillisant sur mon sort. Portez-vous tous bien et dormez sur les deux oreilles.<br>
 
     Je n’ai pas eu de chance. J’ai perdu tout ce que j’avais eu tant de peine d’amasser, c’est-à-dire mes deux ateliers, celui d’Ornans par les Prussiens et le bâtiment de mon exposition au pont de l’Alma, que j’avais fait transporter à la Villette, qui a été employé aux barricades contre les Prussiens.<br>
